# osci-v2

./: .gitignore  CMakeLists.txt  Makefile  readme.md
src/: main.c
